--- a/_config.yml
+++ b/_config.yml
@@ -6,26 +6,25 @@ repository: Git repository where your resume will be hosted, only required if yo
 version: 2
 
 # Personal info
-name: Your Name
-title: Your job title
-email: Your email (optional)
+name: Mohammad Shariq Irshad  
+title: Sr. Dev Engr
+email: Shariff.cs7@gmail.com  
 # email_title: Email (Email title override)
-phone: Your phone number (optional)
+phone: +91-7503763289 (optional)
 # phone_title: Phone (Phone title override)
-website: Your website (eg. https://google.com)(optional)
-# website_title: Web (Website title override)
+
 
 # Dark Mode (true/false/never)
-darkmode: false
+darkmode: True
 
 # Social links
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  Shariff-07
 stackoverflow_username: "00000001"
 dribbble_username: jekyll
 facebook_username: jekyll
 flickr_username: jekyll
-instagram_username: jekyll
+instagram_username: cynic007
 linkedin_username: jekyll
 xing_username: jekyll
 pinterest_username: jekyll
@@ -61,34 +60,32 @@ about_content: | # this will include new lines to allow paragraphs
     - Images ![alt text](/images/landscape-trees.jpg "Trees")
 
 content:
-  - title: Projects # Title for the section
+  - title: Fraud Detection
     layout: list # Type of content section (list/text)
     content:
       - layout: left
         border: weak  # Value of `weak` will display a weak border below this item. # Any 
                       # other value (or no value) means no border will be displayed
-        title: Project name
-        link: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-        link_text: Link Text
+        title: Fraud Detection
+        link: https://github.com/Shariff-07/Fraud_detection
+        link_text: Fraud Detection
         additional_links:
           - title:  Github page for project (eg. sproogen/modern-resume-theme)
             icon: fab fa-github
-            url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-          - title:  Github page for project (eg. sproogen/modern-resume-theme)
-            icon: fab fa-github
-            url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+            url: https://github.com/Shariff-07/Fraud_detection
+          
         quote: >
           Short overview of the project (optional)
-        description: | # this will include new lines to allow paragraphs
+        description: | this will detect fruads based on credit card information
           Description about the work on/with the project
   - title: Experience
     layout: list
     content:
       - layout: right
-        title: Company name
-        sub_title: Job title
-        caption: Date Range (eg. November 2016 - present)
-        link: Link to company (optional)
+        title: Fiserv India
+        sub_title: Software Engr
+        caption: sep2013 - sep2015
+        link: https://www.fiserv.com/
         quote: >
           Short description of the company (optional)
         description: | # this will include new lines to allow paragraphs
@@ -97,9 +94,9 @@ content:
     layout: list
     content:
       - layout: top-right
-        title: Institution name
-        sub_title: Qualifications (eg. BA Performing Arts)
-        caption: Date Range (eg. 2016 - 2019)
+        title: Ajay Kumar Garg Enginerring College
+        sub_title: B.tech (I.T.)
+        caption: Date Range (eg. 2009 - 2013)
         quote: >
           Short institution or course description (optional)
         description: | # this will include new lines to allow paragraphs
